# mcp-memory

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_memory/: config.py  main.py  models.py  server.py  storage.py
tests/: conftest.py  test_config.py  test_storage.py  test_tools.py
