[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP server for persistent agent memory with semantic search"
requires-python = ">= 3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
]

[project.scripts]
mcp-memory = "mcp_memory.main:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
