[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP server for persistent agent memory with semantic search"
requires-python = ">= 3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "chromadb>=1.0.0",
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.11"
